Project

General

Profile

Actions

Bug #56520

closed

perf-crimson-msgr: Aborting on shard 0

Added by Rixin Luo almost 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
ceph-deploy
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when start running perf-crimson-msgr, there is aborting like:

WARNING: debug mode. Not for benchmarking or production
INFO  2022-07-11 11:11:15,616 [shard 18] seastar - Created fair group io-queue-0, capacity rate 2147483:2147483, limit 12582912, rate 16777216 (factor 1.0), threshold 2000
INFO  2022-07-11 11:11:15,618 [shard 18] seastar - Created io group dev(0), length limit 4194304:4194304, rate 2147483647:2147483647
INFO  2022-07-11 11:11:15,619 [shard 0] seastar - Created io queue dev(0) capacities: 512:2000/2000 1024:3000/3000 2048:5000/5000 4096:9000/9000 8192:17000/17000 16384:33000/33000 32768:65000/65000 65536:129000/129000 131072:257000/257000
INFO  2022-07-11 11:11:15,665 [shard 0] ms - 
perf settings:
  client[>> v1:127.0.0.1:9010/0](bs=4096, ramptime=5, msgtime=15, jobs=1, depth=512, v1-crc-enabled=0)
  server[v1:127.0.0.1:9010/0](bs=0, core=0, v1-crc-enabled=0)

perf-crimson-msgr: /home/ceph/src/seastar/include/seastar/core/sharded.hh:800: Service& seastar::sharded<T>::local() [with Service = crimson::common::ConfigProxy]: Assertion `local_is_initialized()' failed.
Aborting on shard 0.

Actions #2

Updated by Samuel Just over 1 year ago

  • Project changed from Ceph to crimson
Actions #3

Updated by Yingxin Cheng over 1 year ago

  • Status changed from New to Resolved
Actions #4

Updated by Yingxin Cheng over 1 year ago

The fix was merged.

Actions

Also available in: Atom PDF