tools/crimson/perf_crimson_msgr: init ConfigPorxy when pref_crimson_msgr start running

While constructing socket connections, there are some config items needed(
`ceph::msgr::v2::FrameAssembler` need the value of `common::local_conf()->ms_crc_data`,
Access `common::local_conf()->ms_crc_data` will cause SIGSEGV without the ConfigProxy init).
So adding ConfigPorxy init before pref_crimson_msgr start running.

Fixes: https://tracker.ceph.com/issues/56520

Signed-off-by: luo rixin <luorixin@huawei.com>